--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -3,7 +3,7 @@ footer {
     position: absolute;
     bottom: 0px;
     height: 60px;
-    width: 100px;
+    width: 100%;
     border-top: 1px solid #CCCCCC;
 }
 
